components/logo-animation.module.css
.logoPath {
  width: 100%;
  height: 100%;
}

.logoPath .path1 {
  stroke: #000;
  stroke-linecap: round;
  stroke-width: 6;
  fill: none;
  stroke-dasharray: 1058.1234130859375 1058.1234130859375;
  stroke-dashoffset: 1058.1234130859375;
  animation: drawLogo 1s ease-in-out forwards 0.5s;
}

@keyframes drawLogo {
  from {
    stroke-dashoffset: -1058.1234130859375; /* hide the stroke initially */
  }
  to {
    stroke-dashoffset: 0; /* gradually reveal the stroke */
  }
}

